[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/levels/BGScroll.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/sprite/environment/bg_cloud_two.png" type="Texture" id=2]
[ext_resource path="res://scenes/player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sprite/environment/bg_cloud_one.png" type="Texture" id=4]
[ext_resource path="res://assets/sprite/environment/bg_cloud_three.png" type="Texture" id=5]
[ext_resource path="res://scripts/levels/Level.gd" type="Script" id=6]
[ext_resource path="res://scenes/pickup/Crystal.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/pickup/Powerup.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/enemy/SpawnBlankey.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/enemy/SpawnHermie.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/enemy/SpawnScotty.tscn" type="PackedScene" id=11]
[ext_resource path="res://scripts/boss/BossPath.gd" type="Script" id=14]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( -16.379, 12.9142, 16.379, -12.9142, 92.7372, 34.8451, -12.2039, 15.7545, 12.2039, -15.7545, 93, 7.02041, 0, 0, 0, 0, 217.018, 7.22725, 19.2355, -12.5083, -19.2355, 12.5083, 217.018, 35.736, 80.32, -26.1434, -80.32, 26.1434, 92.7372, 34.8451 )
}

[node name="Level" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" type="Node2D" parent="."]

[node name="SkyColor" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0.156863, 0.627451, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BGCloudOne" parent="Background" instance=ExtResource( 1 )]
texture = ExtResource( 4 )
centered = false
speed = Vector2( 0, 1 )
delay = Vector2( 1, 1 )

[node name="BGCloudTwo" parent="Background" instance=ExtResource( 1 )]
texture = ExtResource( 2 )
centered = false
speed = Vector2( 0, 2 )
delay = Vector2( 1, 1 )

[node name="BGCloudThree" parent="Background" instance=ExtResource( 1 )]
texture = ExtResource( 5 )
centered = false
speed = Vector2( 0, 4 )
delay = Vector2( 1, 1 )

[node name="AmmoContainer" type="Node2D" parent="."]

[node name="ActorContainer" type="Node2D" parent="."]

[node name="Player" parent="ActorContainer" instance=ExtResource( 3 )]
position = Vector2( 156.843, 161.515 )

[node name="SpawnScotty" parent="ActorContainer" instance=ExtResource( 11 )]
position = Vector2( 80, -50 )

[node name="SpawnBlankey" parent="ActorContainer" instance=ExtResource( 9 )]

[node name="SpawnHermie" parent="ActorContainer" instance=ExtResource( 10 )]
position = Vector2( 80, -70 )

[node name="PickupContainer" type="Node2D" parent="."]

[node name="Crystal" parent="PickupContainer" instance=ExtResource( 7 )]
position = Vector2( 106.035, -92.4713 )

[node name="Powerup" parent="PickupContainer" instance=ExtResource( 8 )]
position = Vector2( 115.987, -63.6866 )

[node name="Powerup2" parent="PickupContainer" instance=ExtResource( 8 )]
position = Vector2( 131.543, -38.2307 )

[node name="Powerup3" parent="PickupContainer" instance=ExtResource( 8 )]
position = Vector2( 154.878, -46.0089 )

[node name="Powerup4" parent="PickupContainer" instance=ExtResource( 8 )]
position = Vector2( 142.857, -67.9292 )

[node name="EffectContainer" type="Node2D" parent="."]

[node name="BossPath" type="Path2D" parent="."]
position = Vector2( -88, 0 )
curve = SubResource( 1 )
script = ExtResource( 14 )

[node name="Follow" type="PathFollow2D" parent="BossPath"]
position = Vector2( 92.7372, 34.8451 )
rotate = false
